--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en"><head><title>My project</title><link rel="icon" href="/alexign88/favicon.svg"><script defer="defer" src="/alexign88/js/main.js"></script><link href="/alexign88/css/main.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
+<!doctype html><html lang="en"><head><title>My project</title><link rel="icon" href="favicon.svg"><script defer="defer" src="js/main.js"></script><link href="css/main.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
